--- a/ZippyIdSDK/ZippyIdSDK/UI/Main.storyboard
+++ b/ZippyIdSDK/ZippyIdSDK/UI/Main.storyboard
@@ -611,22 +611,32 @@
                                 <color key="progressTintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="trackTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </progressView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="ipk-27-gQS">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                <color key="color" red="1" green="0.57647058819999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="ipk-27-gQS" firstAttribute="leading" secondItem="iOk-pn-J6Z" secondAttribute="leading" id="7c3-eI-kFq"/>
                             <constraint firstItem="iOk-pn-J6Z" firstAttribute="bottom" secondItem="zLi-RG-u2Q" secondAttribute="bottom" constant="30" id="IQR-OT-MOZ"/>
                             <constraint firstItem="UUh-gD-ajd" firstAttribute="leading" secondItem="iOk-pn-J6Z" secondAttribute="leading" id="IYn-ed-TzK"/>
                             <constraint firstAttribute="trailing" secondItem="zLi-RG-u2Q" secondAttribute="trailing" constant="50" id="b6W-wi-8j3"/>
                             <constraint firstItem="zLi-RG-u2Q" firstAttribute="top" secondItem="p7f-4M-JOJ" secondAttribute="bottom" constant="20" id="cZx-9t-GDL"/>
                             <constraint firstItem="UUh-gD-ajd" firstAttribute="top" secondItem="EgK-fZ-yRg" secondAttribute="top" id="fiT-QW-mM7"/>
                             <constraint firstItem="zLi-RG-u2Q" firstAttribute="leading" secondItem="EgK-fZ-yRg" secondAttribute="leading" constant="50" id="idx-Ab-CUW"/>
+                            <constraint firstItem="iOk-pn-J6Z" firstAttribute="trailing" secondItem="ipk-27-gQS" secondAttribute="trailing" id="k9d-ES-u4c"/>
+                            <constraint firstItem="iOk-pn-J6Z" firstAttribute="bottom" secondItem="ipk-27-gQS" secondAttribute="bottom" id="kzH-uT-B7Z"/>
                             <constraint firstItem="UUh-gD-ajd" firstAttribute="bottom" secondItem="iOk-pn-J6Z" secondAttribute="bottom" id="pX2-p7-IjK"/>
+                            <constraint firstItem="ipk-27-gQS" firstAttribute="top" secondItem="iOk-pn-J6Z" secondAttribute="top" id="sUR-Ji-F9j"/>
                             <constraint firstAttribute="trailing" secondItem="UUh-gD-ajd" secondAttribute="trailing" id="tF1-VO-tb5"/>
                             <constraint firstItem="p7f-4M-JOJ" firstAttribute="centerX" secondItem="EgK-fZ-yRg" secondAttribute="centerX" id="wcY-aG-CTu"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="iOk-pn-J6Z"/>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="ipk-27-gQS" id="ohv-Qx-aA9"/>
                         <outlet property="button" destination="rmN-4D-zLQ" id="3AI-cE-ond"/>
                         <outlet property="documentBackImageDescLabel" destination="K7F-7B-9mL" id="hVF-HM-wML"/>
                         <outlet property="documentBackImageLabel" destination="eav-51-ZIa" id="WBP-m5-rJT"/>
